--- a/package.json
+++ b/package.json
@@ -11,20 +11,19 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
-    "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
-    "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
-    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.27.10",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rodal": "^1.8.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,11 +34,6 @@
     "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|md|vue)\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.+(js|jsx)": [
