--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
+    "react-owl-carousel": "^2.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
-    "react-slick": "^0.27.10",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "rodal": "^1.8.1",
-    "slick-carousel": "^1.8.1"
+    "rodal": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
