--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-drag-drawer": "^3.3.4",
     "react-owl-carousel": "^2.3.1",
