--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-drag-drawer": "^3.3.4",
+    "react-hook-form": "^6.9.4",
+    "react-image-lightbox": "^5.1.1",
     "react-owl-carousel": "^2.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
