--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
@@ -20,6 +21,7 @@
     "react-drag-drawer": "^3.3.4",
     "react-hook-form": "^6.9.4",
     "react-image-lightbox": "^5.1.1",
+    "react-moment": "^1.0.0",
     "react-owl-carousel": "^2.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
