--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-drag-drawer": "^3.3.4",
     "react-hook-form": "^6.9.4",
     "react-image-lightbox": "^5.1.1",
+    "react-modal": "^3.14.4",
     "react-moment": "^1.0.0",
     "react-owl-carousel": "^2.3.1",
     "react-redux": "^7.2.0",
+    "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
